crates/toml_edit/tests/snapshots/invalid/key/only-float.stderr
TOML parse error at line 1, column 4
  |
1 | 1.1
  |    ^
expected `.`, `=`
